Added year to the movie model (forgot to do that earlier)

--- a/IS413Mission4-Movies/Views/Home/AddMovie.cshtml
+++ b/IS413Mission4-Movies/Views/Home/AddMovie.cshtml
@@ -11,6 +11,10 @@
     <input class="form-control" asp-for="Title" />
     <br />
 
+    <label asp-for="Year">Year:</label>
+    <input type="number" class="form-control" asp-for="Year" />
+    <br />
+
     <label asp-for="Director">Director:</label>
     <input class="form-control" asp-for="Director" />
     <br />
