--- a/IS413Mission4-Movies/Views/Home/Index.cshtml
+++ b/IS413Mission4-Movies/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
     <thead>
         <tr>
             <th>Title</th>
+            <th>Year</th>
             <th>Category</th>
             <th>Director</th>
             <th>Rating</th>
@@ -22,6 +23,7 @@
     {
         <tr>
             <td>@m.Title</td>
+            <td>@m.Year</td>
             <td>@m.Category</td>
             <td>@m.Director</td>
             <td>@m.Rating</td>
