Finished adding all features required by rubric

--- a/IS413Mission4-Movies/Views/Home/AddMovie.cshtml
+++ b/IS413Mission4-Movies/Views/Home/AddMovie.cshtml
@@ -25,6 +25,7 @@
 
     <label asp-for="Rating">Rating:</label>
     <select class="form-control" asp-for="Rating">
+        <option value="null" disabled selected hidden>Select Rating</option>
         <option value="G">G</option>
         <option value="PG">PG</option>
         <option value="PG-13">PG-13</option>
