--- a/IS413Mission4-Movies/Views/Home/MyPodcasts.cshtml
+++ b/IS413Mission4-Movies/Views/Home/MyPodcasts.cshtml
@@ -5,4 +5,4 @@
 }
 
 <h1>My Podcasts</h1>
-<a href="https://baconsale.com/">Click Here</a>
+I do a weekly podcast with a couple friends about movies called <a href="https://baconsale.com/">Baconsale.</a>
