--- a/IS413Mission4-Movies/Views/Home/Index.cshtml
+++ b/IS413Mission4-Movies/Views/Home/Index.cshtml
@@ -4,7 +4,9 @@
 
 @model MovieContext;
 
-<h1 class="display-4">Movie Collection</h1>
+<h1 class="display-4">The Joel Hilton Film Collection</h1>
+<img src="~/img/joelhilton.jpg" />
+<h2 class="mt-3">Movie List</h2>
 <table class="table">
     <thead>
         <tr>
